<resources>
    <string name="app_name">Roadmap</string>
    <string name="mensagem_inicial">Comece sua Jornada!</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_atualizar">Atualizar</string>
    <string name="action_configuracao">Configurações</string>
    <string name="btn_login">Entrar</string>
    <string name="tv_senha">Senha</string>
    <string name="tv_email">E-mail</string>
    <string name="iv_logo_imagem">Logo</string>
    <string name="action_sair">Sair</string>
    <string name="title_dashboard">Roadmap</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Mensagens</string>
    <string name="sync_header">Sincronizar</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Sua assinatura</string>
    <string name="reply_title">Ação de resposta padrão</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sincronizar e-mail periodicamente</string>
    <string name="attachment_title">Baixar anexos recebidos</string>
    <string name="attachment_summary_on">Baixar automaticamente os anexos de e-mails recebidos</string>
    <string name="attachment_summary_off">Baixe apenas anexos quando solicitado manualmente</string>

    <!-- Drawer Nevigation -->
    <string name="nav_roadmap">Roadmap</string>
    <string name="nav_favoritos">Favoritos</string>
    <string name="nav_sair">Sair</string>
    <string name="nav_abrir">Abrir menu</string>
    <string name="nav_fechar">Fechar menu</string>

    <!-- Screens -->
    <string name="btn_login_github">Entrar com GitHub</string>
    <string name="repositorio">Repositório</string>
    <string name="branch">Branch</string>
    <string name="cb_lembrar">Lembrar de mim</string>
    <string name="nao_possui_cadastro">Não possui cadastro?</string>
    <string name="clique_aqui">Clique aqui!</string>
    <string name="finalizar_cadastro">Finalizar cadastro</string>
    <string name="nav_eventos">Eventos</string>
</resources>