<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/backgroundColor">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="299dp"
        android:layout_height="142dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/iv_logo_imagem"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensagem_inicial"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginVertical="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/tv_email"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorAccent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/tv_senha"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:backgroundTint="@color/colorAccent"/>

    <CheckBox
        android:id="@+id/cbRemember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/cb_lembrar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:stateListAnimator="@null"
            android:text="@string/btn_login"
            android:background="@color/colorButtonDark"
            android:textAllCaps="false"/>

        <ProgressBar
            android:id="@+id/btnLoginLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateTint="@android:color/white"
            android:visibility="invisible" />

    </FrameLayout>

    <Button
        android:id="@+id/btnLoginGithub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButtonDark"
        android:drawablePadding="-8dp"
        android:drawableStart="@drawable/ic_github"
        android:padding="8dp"
        android:text="@string/btn_login_github"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/btnCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/nao_possui_cadastro"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clique_aqui"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>